# Gen_ai

./: .gitignore  README.md  pyproject.toml  report.md  requirements.txt
output/: 2025-03-21_17-35-31.docx  2025-03-21_17-50-29.docx  2025-03-21_17-57-42.docx  2025-03-21_18-20-45.docx  2025-03-21_18-27-01.docx  2025-03-21_19-09-37.docx  2025-03-21_19-14-06.docx  2025-03-21_19-18-43.docx  2025-03-21_19-25-55.docx  2025-03-21_19-47-59.docx  2025-03-21_20-02-45.docx  2025-03-21_20-16-54.docx  2025-03-21_20-38-43.docx  2025-03-21__20-41-49.docx  2025-03-21__20-44-09.docx  2025-03-21__20-55-38.docx  2025-03-21__20-58-26.docx  case_study_Ajio_2025-03-22_17-09-37.docx  case_study_Amazon_2025-03-22_09-01-29.docx  case_study_Amazon_2025-03-22_09-13-53.docx  case_study_Company_2025-03-22_08-29-34.docx  case_study_Flipkart_2025-03-22_16-54-15.docx  case_study_Flipkart_2025-03-22_17-01-36.docx  case_study_Inc._2025-03-21_20-54-06.docx  case_study_Inc._2025-03-22_08-36-28.docx  case_study_Inc._2025-03-22_08-46-52.docx  debug_structured_text.txt  formatted_case_study.docx  structured_text_2025-03-21_20-54-06.txt  structured_text_2025-03-22_08-29-34.txt  structured_text_2025-03-22_08-36-28.txt  structured_text_2025-03-22_08-46-52.txt  structured_text_2025-03-22_08-56-51.txt  structured_text_2025-03-22_09-01-29.txt  structured_text_2025-03-22_09-13-53.txt  structured_text_2025-03-22_16-29-59.txt  structured_text_2025-03-22_16-39-57.txt  structured_text_2025-03-22_16-45-36.txt  structured_text_2025-03-22_16-54-15.txt  structured_text_2025-03-22_17-01-36.txt  (+1 more)
src/pedo/: cli.py  crew.py  (+3 more)
(+4 files in other folders)
