[project]
name = "pedo"
version = "0.1.0"
description = "pedo using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.108.0,<1.0.0"
]

[project.scripts]
pedo = "pedo.main:run"
run_crew = "pedo.main:run"
train = "pedo.main:train"
replay = "pedo.main:replay"
test = "pedo.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
